--- a/projects/localizei18n/src/locale/messages.xlf
+++ b/projects/localizei18n/src/locale/messages.xlf
@@ -53,11 +53,46 @@
           <context context-type="linenumber">8,10</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="input-placeholder" datatype="html">
+        <source>Enter your name</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/localizei18n/src/app/app.component.html</context>
+          <context context-type="linenumber">15,19</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="imageTag" datatype="html">
+        <source>Alt text for logo image</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/localizei18n/src/app/app.component.html</context>
+          <context context-type="linenumber">22,25</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="3702835034531214952" datatype="html">
         <source> Created by <x id="PH" equiv-text="this.title"/></source>
         <context-group purpose="location">
           <context context-type="sourcefile">projects/localizei18n/src/app/app.component.ts</context>
           <context context-type="linenumber">13</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="option1" datatype="html">
+        <source>Option 1</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/localizei18n/src/app/app.component.ts</context>
+          <context context-type="linenumber">19</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="option2" datatype="html">
+        <source>Option 2</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/localizei18n/src/app/app.component.ts</context>
+          <context context-type="linenumber">20</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="option3" datatype="html">
+        <source>Option 3</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">projects/localizei18n/src/app/app.component.ts</context>
+          <context context-type="linenumber">21</context>
         </context-group>
       </trans-unit>
     </body>
