--- a/projects/localizei18n/src/locale/messages.json
+++ b/projects/localizei18n/src/locale/messages.json
@@ -10,7 +10,26 @@
     "324706692010051697": "{VAR_PLURAL, plural, zero {no tasks} one {one task} other {{INTERPOLATION} tasks}}",
     "input-placeholder": "Enter your name",
     "imageTag": "Alt text for logo image",
-    "3702835034531214952": " Created by {$PH}",
+    "myCustomId": "Submit",
+    "heading1": " Hello Internationalization its prateek!",
+    "checkLang1": "Meta Data for i18n prepaired by Prateek",
+    "href11": "/en-JA/portfolio",
+    "title11": "attribute Check",
+    "aTag1": "Attribute Check",
+    "pluralization1": " {$ICU} ",
+    "input-placeholder1": "Enter your name",
+    "imageTag1": "Alt text for logo image",
+    "myCustomId1": "Submit",
+    "heading2": " Hello Internationalization its prateek!",
+    "checkLang2": "Meta Data for i18n prepaired by Prateek",
+    "href12": "/en-JA/portfolio",
+    "title12": "attribute Check",
+    "aTag2": "Attribute Check",
+    "pluralization2": " {$ICU} ",
+    "input-placeholder2": "Enter your name",
+    "imageTag2": "Alt text for logo image",
+    "myCustomId2": "Submit",
+    "localizeId": "Created by {$PH}",
     "option1": "Option 1",
     "option2": "Option 2",
     "option3": "Option 3"
