--- a/projects/dynamic-i18n/src/assets/i18n/de.json
+++ b/projects/dynamic-i18n/src/assets/i18n/de.json
@@ -24,5 +24,173 @@
     "input.placeholder1": "de Enter the value here",
     "image.alt1": "de Alternate Image Value",
     "submit1": "de added value",
-    "div1": "de div value"
+    "div1": "de div value",
+    "heading2": "de Hello Internationalization its prateek!",
+    "metadata2": "de Meta Data for i18n prepaired by Prateek",
+    "hrefvalue2": "de /en-JA/portfolio",
+    "company.options2": [
+        "de option1",
+        "de option2",
+        "de option3"
+    ],
+    "input.placeholder2": "de Enter the value here",
+    "image.alt2": "de Alternate Image Value",
+    "submit2": "de added value",
+    "div2": "de div value",
+    "heading3": "de Hello Internationalization its prateek!",
+    "metadata3": "de Meta Data for i18n prepaired by Prateek",
+    "hrefvalue3": "de /en-JA/portfolio",
+    "company.options3": [
+        "de option1",
+        "de option2",
+        "de option3"
+    ],
+    "input.placeholder3": "de Enter the value here",
+    "image.alt3": "de Alternate Image Value",
+    "submit3": "de added value",
+    "div3": "de div value",
+    "heading4": "de Hello Internationalization its prateek!",
+    "metadata4": "de Meta Data for i18n prepaired by Prateek",
+    "hrefvalue4": "de /en-JA/portfolio",
+    "company.options4": [
+        "de option1",
+        "de option2",
+        "de option3"
+    ],
+    "input.placeholder4": "de Enter the value here",
+    "image.alt4": "de Alternate Image Value",
+    "submit4": "de added value",
+    "div4": "de div value",
+    "heading5": "de Hello Internationalization its prateek!",
+    "metadata5": "de Meta Data for i18n prepaired by Prateek",
+    "hrefvalue5": "de /en-JA/portfolio",
+    "company.options5": [
+        "de option1",
+        "de option2",
+        "de option3"
+    ],
+    "input.placeholder5": "de Enter the value here",
+    "image.alt5": "de Alternate Image Value",
+    "submit5": "de added value",
+    "div5": "de div value",
+    "heading6": "de Hello Internationalization its prateek!",
+    "metadata6": "de Meta Data for i18n prepaired by Prateek",
+    "hrefvalue6": "de /en-JA/portfolio",
+    "company.options6": [
+        "de option1",
+        "de option2",
+        "de option3"
+    ],
+    "input.placeholder6": "de Enter the value here",
+    "image.alt6": "de Alternate Image Value",
+    "submit6": "de added value",
+    "div6": "de div value",
+    "heading7": "de Hello Internationalization its prateek!",
+    "metadata7": "de Meta Data for i18n prepaired by Prateek",
+    "hrefvalue7": "de /en-JA/portfolio",
+    "company.options7": [
+        "de option1",
+        "de option2",
+        "de option3"
+    ],
+    "input.placeholder7": "de Enter the value here",
+    "image.alt7": "de Alternate Image Value",
+    "submit7": "de added value",
+    "div7": "de div value",
+    "heading8": "de Hello Internationalization its prateek!",
+    "metadata8": "de Meta Data for i18n prepaired by Prateek",
+    "hrefvalue8": "de /en-JA/portfolio",
+    "company.options8": [
+        "de option1",
+        "de option2",
+        "de option3"
+    ],
+    "input.placeholder8": "de Enter the value here",
+    "image.alt8": "de Alternate Image Value",
+    "submit8": "de added value",
+    "div8": "de div value",
+    "heading9": "de Hello Internationalization its prateek!",
+    "metadata9": "de Meta Data for i18n prepaired by Prateek",
+    "hrefvalue9": "de /en-JA/portfolio",
+    "company.options9": [
+        "de option1",
+        "de option2",
+        "de option3"
+    ],
+    "input.placeholder9": "de Enter the value here",
+    "image.alt9": "de Alternate Image Value",
+    "submit9": "de added value",
+    "div9": "de div value",
+    "heading10": "de Hello Internationalization its prateek!",
+    "metadata10": "de Meta Data for i18n prepaired by Prateek",
+    "hrefvalue10": "de /en-JA/portfolio",
+    "company.options10": [
+        "de option1",
+        "de option2",
+        "de option3"
+    ],
+    "input.placeholder10": "de Enter the value here",
+    "image.alt10": "de Alternate Image Value",
+    "submit10": "de added value",
+    "div10": "de div value",
+    "heading11": "de Hello Internationalization its prateek!",
+    "metadata11": "de Meta Data for i18n prepaired by Prateek",
+    "hrefvalue11": "de /en-JA/portfolio",
+    "company.options11": [
+        "de option1",
+        "de option2",
+        "de option3"
+    ],
+    "input.placeholder11": "de Enter the value here",
+    "image.alt11": "de Alternate Image Value",
+    "submit11": "de added value",
+    "div11": "de div value",
+    "heading12": "de Hello Internationalization its prateek!",
+    "metadata12": "de Meta Data for i18n prepaired by Prateek",
+    "hrefvalue12": "de /en-JA/portfolio",
+    "company.options12": [
+        "de option1",
+        "de option2",
+        "de option3"
+    ],
+    "input.placeholder12": "de Enter the value here",
+    "image.alt12": "de Alternate Image Value",
+    "submit12": "de added value",
+    "div12": "de div value",
+    "heading13": "de Hello Internationalization its prateek!",
+    "metadata13": "de Meta Data for i18n prepaired by Prateek",
+    "hrefvalue13": "de /en-JA/portfolio",
+    "company.options13": [
+        "de option1",
+        "de option2",
+        "de option3"
+    ],
+    "input.placeholder13": "de Enter the value here",
+    "image.alt13": "de Alternate Image Value",
+    "submit13": "de added value",
+    "div13": "de div value",
+    "heading14": "de Hello Internationalization its prateek!",
+    "metadata14": "de Meta Data for i18n prepaired by Prateek",
+    "hrefvalue14": "de /en-JA/portfolio",
+    "company.options14": [
+        "de option1",
+        "de option2",
+        "de option3"
+    ],
+    "input.placeholder14": "de Enter the value here",
+    "image.alt14": "de Alternate Image Value",
+    "submit14": "ade dded value",
+    "div14": "de div value",
+    "heading15": "de Hello Internationalization its prateek!",
+    "metadata15": "de Meta Data for i18n prepaired by Prateek",
+    "hrefvalue15": "de /en-JA/portfolio",
+    "company.options15": [
+        "de option1",
+        "de option2",
+        "de option3"
+    ],
+    "input.placeholder16": "de Enter the value here",
+    "image.alt16": "de Alternate Image Value",
+    "submit16": "de added value",
+    "div16": "de div value"
 }
