--- a/projects/dynamic-i18n/src/assets/i18n/fr.json
+++ b/projects/dynamic-i18n/src/assets/i18n/fr.json
@@ -24,5 +24,173 @@
     "input.placeholder1": "fr Enter the value here",
     "image.alt1": "fr Alternate Image Value",
     "submit1": "fr added value",
-    "div1": "fr div value"
+    "div1": "fr div value",
+    "heading2": "fr Hello Internationalization its prateek!",
+    "metadata2": "fr Meta Data for i18n prepaired by Prateek",
+    "hrefvalue2": "fr /en-JA/portfolio",
+    "company.options2": [
+        "fr option1",
+        "fr option2",
+        "fr option3"
+    ],
+    "input.placeholder2": "fr Enter the value here",
+    "image.alt2": "fr Alternate Image Value",
+    "submit2": "fr added value",
+    "div2": "fr div value",
+    "heading3": "fr Hello Internationalization its prateek!",
+    "metadata3": "fr Meta Data for i18n prepaired by Prateek",
+    "hrefvalue3": "fr /en-JA/portfolio",
+    "company.options3": [
+        "fr option1",
+        "fr option2",
+        "fr option3"
+    ],
+    "input.placeholder3": "fr Enter the value here",
+    "image.alt3": "fr Alternate Image Value",
+    "submit3": "fr added value",
+    "div3": "fr div value",
+    "heading4": "fr Hello Internationalization its prateek!",
+    "metadata4": "fr Meta Data for i18n prepaired by Prateek",
+    "hrefvalue4": "fr /en-JA/portfolio",
+    "company.options4": [
+        "fr option1",
+        "fr option2",
+        "fr option3"
+    ],
+    "input.placeholder4": "fr Enter the value here",
+    "image.alt4": "fr Alternate Image Value",
+    "submit4": "fr added value",
+    "div4": "fr div value",
+    "heading5": "fr Hello Internationalization its prateek!",
+    "metadata5": "fr Meta Data for i18n prepaired by Prateek",
+    "hrefvalue5": "fr /en-JA/portfolio",
+    "company.options5": [
+        "fr option1",
+        "fr option2",
+        "fr option3"
+    ],
+    "input.placeholder5": "fr Enter the value here",
+    "image.alt5": "fr Alternate Image Value",
+    "submit5": "fr added value",
+    "div5": "fr div value",
+    "heading6": "fr Hello Internationalization its prateek!",
+    "metadata6": "fr Meta Data for i18n prepaired by Prateek",
+    "hrefvalue6": "fr /en-JA/portfolio",
+    "company.options6": [
+        "fr option1",
+        "fr option2",
+        "fr option3"
+    ],
+    "input.placeholder6": "fr Enter the value here",
+    "image.alt6": "fr Alternate Image Value",
+    "submit6": "fr added value",
+    "div6": "fr div value",
+    "heading7": "fr Hello Internationalization its prateek!",
+    "metadata7": "fr Meta Data for i18n prepaired by Prateek",
+    "hrefvalue7": "fr /en-JA/portfolio",
+    "company.options7": [
+        "fr option1",
+        "fr option2",
+        "fr option3"
+    ],
+    "input.placeholder7": "fr Enter the value here",
+    "image.alt7": "fr Alternate Image Value",
+    "submit7": "fr added value",
+    "div7": "fr div value",
+    "heading8": "fr Hello Internationalization its prateek!",
+    "metadata8": "fr Meta Data for i18n prepaired by Prateek",
+    "hrefvalue8": "fr /en-JA/portfolio",
+    "company.options8": [
+        "fr option1",
+        "fr option2",
+        "fr option3"
+    ],
+    "input.placeholder8": "fr Enter the value here",
+    "image.alt8": "fr Alternate Image Value",
+    "submit8": "fr added value",
+    "div8": "fr div value",
+    "heading9": "fr Hello Internationalization its prateek!",
+    "metadata9": "fr Meta Data for i18n prepaired by Prateek",
+    "hrefvalue9": "fr /en-JA/portfolio",
+    "company.options9": [
+        "fr option1",
+        "fr option2",
+        "fr option3"
+    ],
+    "input.placeholder9": "fr Enter the value here",
+    "image.alt9": "fr Alternate Image Value",
+    "submit9": "fr added value",
+    "div9": "fr div value",
+    "heading10": "fr Hello Internationalization its prateek!",
+    "metadata10": "fr Meta Data for i18n prepaired by Prateek",
+    "hrefvalue10": "fr /en-JA/portfolio",
+    "company.options10": [
+        "fr option1",
+        "fr option2",
+        "fr option3"
+    ],
+    "input.placeholder10": "fr Enter the value here",
+    "image.alt10": "fr Alternate Image Value",
+    "submit10": "fr added value",
+    "div10": "fr div value",
+    "heading11": "fr Hello Internationalization its prateek!",
+    "metadata11": "fr Meta Data for i18n prepaired by Prateek",
+    "hrefvalue11": "fr /en-JA/portfolio",
+    "company.options11": [
+        "fr option1",
+        "fr option2",
+        "fr option3"
+    ],
+    "input.placeholder11": "fr Enter the value here",
+    "image.alt11": "fr Alternate Image Value",
+    "submit11": "fr added value",
+    "div11": "fr div value",
+    "heading12": "fr Hello Internationalization its prateek!",
+    "metadata12": "fr Meta Data for i18n prepaired by Prateek",
+    "hrefvalue12": "fr /en-JA/portfolio",
+    "company.options12": [
+        "fr option1",
+        "fr option2",
+        "fr option3"
+    ],
+    "input.placeholder12": "fr Enter the value here",
+    "image.alt12": "fr Alternate Image Value",
+    "submit12": "fr added value",
+    "div12": "fr div value",
+    "heading13": "fr Hello Internationalization its prateek!",
+    "metadata13": "fr Meta Data for i18n prepaired by Prateek",
+    "hrefvalue13": "fr /en-JA/portfolio",
+    "company.options13": [
+        "fr option1",
+        "fr option2",
+        "fr option3"
+    ],
+    "input.placeholder13": "fr Enter the value here",
+    "image.alt13": "fr Alternate Image Value",
+    "submit13": "fr added value",
+    "div13": "fr div value",
+    "heading14": "fr Hello Internationalization its prateek!",
+    "metadata14": "fr Meta Data for i18n prepaired by Prateek",
+    "hrefvalue14": "fr /en-JA/portfolio",
+    "company.options14": [
+        "fr option1",
+        "fr option2",
+        "fr option3"
+    ],
+    "input.placeholder14": "fr Enter the value here",
+    "image.alt14": "fr Alternate Image Value",
+    "submit14": "afr dded value",
+    "div14": "fr div value",
+    "heading15": "fr Hello Internationalization its prateek!",
+    "metadata15": "fr Meta Data for i18n prepaired by Prateek",
+    "hrefvalue15": "fr /en-JA/portfolio",
+    "company.options15": [
+        "fr option1",
+        "fr option2",
+        "fr option3"
+    ],
+    "input.placeholder16": "fr Enter the value here",
+    "image.alt16": "fr Alternate Image Value",
+    "submit16": "fr added value",
+    "div16": "fr div value"
 }
